clarified colours, included the white literal the uon brand depends on

--- a/frontend/sass/settings/_bootstrap-theme.scss
+++ b/frontend/sass/settings/_bootstrap-theme.scss
@@ -1,4 +1,4 @@
-@import 'uon-colours';
+@import 'colours';
 
 // Bootstrap's $theme-colors map for modifying the theme
 // - if you want the default theme back, don't import this file! ;)
