--- a/frontend/sass/settings/_colours.scss
+++ b/frontend/sass/settings/_colours.scss
@@ -1,6 +1,11 @@
 // https: //www.nottingham.ac.uk/brand/services/colours.aspx
 
+// literal helpers
+$color-white: #fff;
+
+
 // UoN brand colours (appropriate for Bootstrap)
+// (you can replace these to theme differently)
 $brand-primary: #005597; // Blue Three
 $brand-secondary: #92918e; // Neutral Tw o
 $brand-success: #37a158; // Bright Green
@@ -9,3 +14,6 @@ $brand-warning: #d27826; // Arts
 $brand-info: #099085; // Turquoise
 $brand-light: mix($color-white, $brand-secondary, 80%); // Neutral Two (tinted lighter)
 $brand-dark: #4a4949; // Neutral One
+
+
+// Site specific colours below
