--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -1,5 +1,5 @@
-@import 'settings/bootstrap-theme';
-@import 'components/uon-logo';
+@import "settings/bootstrap-theme";
+@import "components/uon-logo";
 
 // 3rd party bits
-@import '../node_modules/bootstrap/scss/bootstrap';
+@import "../node_modules/bootstrap/scss/bootstrap";
